try fixing icon not showing on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -171,9 +171,6 @@ span:hover {
 }
 
 @media only screen and (max-width: 24rem) {
-  img {
-    display: none;
-  }
   * {
     font-size: 1rem;
   }
